<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="10dp"
    android:background="@drawable/ecr_backgrond2"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:id="@+id/event_title"
    android:gravity="center"
    />
    
   <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    >
       <LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    >

   <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:paddingTop="15dp"
    >
       <Button 
        android:id="@+id/email"
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/send_email"/>
        </LinearLayout>
     <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:paddingTop="85dp"
    >
       <Button 
        android:id="@+id/remotesync"
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/remote_sync"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:gravity="center_horizontal"
    android:paddingLeft="25dp"
    android:visibility="gone"
    android:id="@+id/save_to_file_layout"
    >
    <TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enterdetails"/>
   <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TextView android:layout_width="90dp"
    android:layout_height="wrap_content"
    android:text="@string/file_name"/>
    <EditText 
    android:layout_width="150dp"
    android:layout_height="35dp"
    android:singleLine="true"
    />
    
     </LinearLayout>
      <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TextView android:layout_width="90dp"
    android:layout_height="wrap_content"
    android:text="@string/save_loc"/>
    <Button 
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:text="@string/default1"
    />
    
     </LinearLayout>
     <Button
    android:id="@+id/done"
    android:layout_width="90dp"
    android:layout_height="wrap_content"
    android:text="@string/done"/>
    </LinearLayout>
    

    
    
    
    
    
     <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:gravity="center_horizontal"
    android:paddingLeft="50dp"
    android:id="@+id/remote_sync_layout" 
    android:visibility="gone"   >
    <TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enterdetails"/>
   <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TextView android:layout_width="90dp"
    android:layout_height="wrap_content"
    android:text="@string/remote"/>
    <EditText 
    android:layout_width="150dp"
    android:layout_height="35dp"
    android:singleLine="true"
    />
    </LinearLayout>
      <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TextView android:layout_width="90dp"
    android:layout_height="wrap_content"
    android:text="@string/user_name"/>
    <EditText 
    android:layout_width="150dp"
    android:layout_height="35dp"
    android:singleLine="true"
    />
    </LinearLayout>
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TextView android:layout_width="90dp"
    android:layout_height="wrap_content"
    android:text="@string/password"/>
    <EditText 
    android:layout_width="150dp"
    android:layout_height="35dp"
    android:singleLine="true"
    />
    </LinearLayout>
     <Button
    android:id="@+id/athenticate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/athenticate"/>
    </LinearLayout> 
    
    
    
    </LinearLayout>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    >
    <Button
    android:id="@+id/continuebtn"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:text="@string/event_continue"
    android:gravity="center"/>
      </LinearLayout>
</LinearLayout>
