<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="10dp"
    android:background="@drawable/ecr_backgrond2">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:id="@+id/event_title"
    android:gravity="center"
    />
    
   <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    >
       <LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    >
      <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
      android:paddingTop="25dp"
    >
       <Button 
       android:id="@+id/rfreader"
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/rfreader"/>
        </LinearLayout>
   <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:paddingTop="25dp"
    >
       <Button 
       android:id="@+id/manualreader"
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/keyboardinput"/>
        </LinearLayout>
    </LinearLayout>
    
   <LinearLayout
   	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="25dp"
    android:orientation="vertical"
    android:id="@+id/rf_manual_data_layout"
    >
    <LinearLayout
   	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  
    >
    <TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/rf_data"/>
    </LinearLayout>
      <LinearLayout
   	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="50dp"
    >
    <TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/manual_data"/>
     </LinearLayout>
     </LinearLayout>
     
     
      <LinearLayout
    android:id="@+id/rfdata_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:gravity="center"
    android:paddingLeft="25dp"
    android:visibility="gone"
    >
    <TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/rf_data"/>
    
     </LinearLayout> 
     
         
       
      
      
       <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/manual_reader_layout"
    android:paddingLeft="25dp"
      android:visibility="gone"
    >
    <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/enterdetails"
    android:gravity="center"
/>
        <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:text="@string/first_name"/>
    <EditText 
    android:layout_width="150dp"
    android:layout_height="35dp"
    android:singleLine="true"
    />
    
     </LinearLayout>
        <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:text="@string/last_name"/>
    <EditText 
    android:layout_width="150dp"
    android:layout_height="35dp"
    android:singleLine="true"/>
    
     </LinearLayout>
        <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:text="@string/badgeid"/>
    <EditText 
    android:layout_width="150dp"
    android:layout_height="35dp"
    android:singleLine="true"/>
    
     </LinearLayout>
        <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:text="@string/entity_name"/>
    <EditText 
    android:layout_width="150dp"
    android:layout_height="35dp"
    android:singleLine="true"/>
    
     </LinearLayout>
      <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:text="@string/others"/>
    <EditText 
    android:layout_width="150dp"
    android:layout_height="35dp"
    android:singleLine="true"/>
    
     </LinearLayout>
    </LinearLayout>
     
     
     
     
    </LinearLayout>
    <LinearLayout
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    >
    <Button
    android:id="@+id/continuebtn"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:text="@string/event_continue"/>
      </LinearLayout>
</LinearLayout>
