<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="10dp"
    android:background="@drawable/ecr_backgrond2"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:id="@+id/event_title"
    android:gravity="center"
    />
   <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:gravity="center_horizontal"
    >
		<Button 
       	android:id="@+id/rfreader"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:text="@string/rfreader"/>
        <Button 
       	android:id="@+id/manualreader"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:text="@string/keyboardinput"/>
        <Button 
       	android:id="@+id/rfKbdCntBtn"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:text="@string/event_continue"/>
       	             
    </LinearLayout>
    
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/seperator"
    android:paddingTop="10dp"
    />

    
    <EditText  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:id="@+id/rfEditText"
    android:gravity="left"
    android:visibility="gone"
    android:cursorVisible="true"
    />
    
   <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/seperator"
    android:paddingTop="10dp"
    />
        
   <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="10dp"
    >


       
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"

    android:id="@+id/rfkb_layout"
    >
       <ListView android:layout_height="fill_parent" 
           android:paddingLeft="40dp"
           android:id="@+id/history_list" android:layout_width="fill_parent">
           
       </ListView>  
    
   </LinearLayout>
   

       
     </LinearLayout>
     

   
    
     </LinearLayout>
   

